done with assignment

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv='X-UA-Compatible' content='ie=edge'/>
   <title>Document</title>
   <script src='js/index.js'></script>
+
   <link rel='stylesheet' href='index.css'/>
 </head>
 <body>
@@ -29,5 +30,6 @@
 
   </div>
 
+  <script src='js/index.js'></script>
 </body>
 </html>
